# detection-de-tumeurs-au-cerveau

./: .gitignore  README.md  dataset.py  inference.py  main.py  processing.py  pyproject.toml  start.sh  trainer.py
app/: api.py  train_service.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/confidentialite/: page.tsx
frontend/components/: analysis-skeleton.tsx  analyze-button.tsx  error-banner.tsx  explainability-panel.tsx  image-preview.tsx  medical-disclaimer.tsx  result-card.tsx  site-header.tsx  upload-dropzone.tsx
frontend/lib/: mock-results.ts
