[project]
name = "detection-de-tumeurs-au-cerveau"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.5",
    "hydra-core>=1.3.2",
    "kagglehub>=0.4.3",
    "mlflow>=3.9.0",
    "omegaconf>=2.3.0",
    "psutil>=7.2.2",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
]
